assets/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  h1 {
    @apply text-4xl mb-2;
  }

  h2 {
    @apply text-3xl mb-2;
  }

  h3 {
    @apply text-2xl mb-2;
  }

  h4 {
    @apply text-xl mb-2;
  }

  h5 {
    @apply text-lg mb-2;
  }

  #content > h4 {
    @apply mt-6;
  }

  #content > h5 {
    @apply mt-4;
  }

  p {
    @apply mb-2;
  }

  a {
    @apply text-sky-300;
  }

  svg {
    @apply fill-current;
  }

  img + em,
  .label {
    @apply block text-center text-base text-neutral-400 my-2 max-w-lg mx-auto;
  }

  p:has(img),
  iframe {
    @apply my-6;
  }

  p:has(img) > img {
    @apply mx-auto max-h-64 rounded;
  }

  blockquote {
    @apply border-l-2 border-neutral-600 pl-2 my-3 text-base text-slate-400 max-w-min min-w-fit;
  }

  table {
    @apply w-full text-left my-6;
  }

  th,
  td {
    @apply border border-neutral-600 px-3 py-1;
  }

  iframe {
    @apply mx-auto;
  }
}

@layer components {
  .nav-btn-selected {
    @apply p-2 px-4 bg-neutral-900 rounded-full;
  }

  .nav-btn {
    @apply p-2 px-4 hover:bg-neutral-900 hover:rounded-full;
  }

  .box {
    @apply bg-neutral-800 rounded-md overflow-hidden;
  }

  .box-detail {
    @apply hidden;
  }

  .chip {
    @apply p-2 bg-sky-900 rounded-full px-2 py-1 text-xs font-bold text-white w-min;
  }

  .box:hover > .box-detail {
    @apply block;
  }
}

@font-face {
  font-family: "Playwrite PT";
  src: url("/assets/fonts/Playwrite_PT/PlaywritePT-VariableFont_wght.ttf")
    format("truetype");
  font-display: optional;
}

@font-face {
  font-family: "Inter";
  src: url("/assets/fonts/Inter/Inter-VariableFont_opsz,wght.ttf")
    format("truetype");
  font-display: optional;
}

body {
  word-wrap: break-word;
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
}

.playwrite {
  font-family: "Playwrite PT", cursive;
}

